service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: nginxinfo
  labels:
    app: nginx
spec:
  ports:
  - port: 80
    targetPort: 80
    name: http 
  selector:
    app: nginx
